# sdx-controller

./: .dockerignore  .gitignore  .hadolint.yaml  .mailmap  BreakdownEngine.py  CHANGELOG.md  Dockerfile  LICENSE  LocalControllerManager.py  MessageQueue.py  README.md  RuleRegistry.py  SDXController.py  SdxMQ.py  TopologyManager.py  compose.bapm.yml  compose.yml  docker-compose-mq.yml  docker-compose.yml  elastic-search-setup.sh  env  env.local  env.template  pyproject.toml  requirements.txt  setup.py  swagger.yaml  test-requirements.txt  tox.ini
.github/workflows/: checks.yml  images.yml  test.yml
bapm_server/: Dockerfile  __main__.py  bapm_consumer.py  bapm_publisher.py  requirements.txt
mq-test/sdx-ctlr/: sdx-ctlr.py  sdx-file-receiver.py  sdx.manifest
sample-requests/: sax.json
samples/connection-requests/: amlight-to-amlight.json  sax-to-amlight-1.json  sax-to-sax.json
samples/topologies/: amlight.json  zaoxi.json
sdx_controller/: __init__.py  __main__.py  app.py  encoder.py  util.py
sdx_controller/controllers/: authorization_controller.py  connection_controller.py  l2vpn_controller.py  topology_controller.py  user_controller.py
sdx_controller/handlers/: connection_handler.py  lc_message_handler.py
sdx_controller/messaging/: message_queue_consumer.py  rpc_queue_consumer.py  rpc_queue_producer.py  topic_queue_consumer.py  topic_queue_producer.py
sdx_controller/models/: __init__.py  api_response.py  base_model_.py  connection.py  connection_qos_metrics.py  connection_qos_unit.py  connection_scheduling.py  connection_v2.py  connection_v2_endpoints.py  connection_v2_notifications.py  l2vpn_body.py  l2vpn_service_id_body.py  link.py  location.py  node.py  port.py  simple_link.py  topology.py  user.py
sdx_controller/swagger/: swagger.yaml
sdx_controller/test/: __init__.py  test_connection_controller.py  test_connection_state_machine.py  test_db_utils.py  test_l2vpn_controller.py  test_link_controller.py  test_node_controller.py  test_topology_controller.py  test_user_controller.py
sdx_controller/utils/: constants.py  db_utils.py  parse_helper.py  sdx_utils.py
sdx_server/: __main__.py  encoder.py
sdx_server/controllers/: connection_controller.py  topology_controller.py  user_controller.py
sdx_server/handlers/: connection_handler.py
sdx_server/messaging/: rpc_queue_consumer.py
sdx_server/models/: __init__.py  base_model_.py  link.py  location.py  node.py  port.py  topology.py  user.py
sdx_server/swagger/: swagger.yaml
sdx_server/test/: __init__.py  test_connection_controller.py  test_db_utils.py  test_link_controller.py  test_node_controller.py  test_user_controller.py
sdx_server/utils/: db_utils.py
swagger_server/: __main__.py  combined_topo.json  util.py
swagger_server/controllers/: authorization_controller.py  connection.json  connection_controller.py  link_controller.py  node_controller.py  topology_controller.py  user_controller.py
swagger_server/handlers/: connection_handler.py  lc_message_handler.py
swagger_server/messaging/: async_consumer.py  async_publisher.py  message_queue.py  message_queue_consumer.py  rpc_queue_consumer.py  rpc_queue_producer.py  topic_queue_consumer.py  topic_queue_producer.py
swagger_server/models/: __init__.py  api_response.py  base_model_.py  connection.py  link.py  location.py  node.py  port.py  simple_link.py  topology.py  user.py
swagger_server/swagger/: swagger-backup.yaml  swagger.yaml
swagger_server/test/: __init__.py  test_connection_controller.py  test_link_controller.py  test_node_controller.py  test_topology_controller.py  test_user_controller.py
swagger_server/utils/: db_utils.py  parse_helper.py
tests/: test_Solver.py
worker/: Dockerfile  app.py
(+14 files in other folders)
