[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools-scm >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "sdx-controller"
description = "AtlanticWave-SDX project's main controller"
dynamic = [ "version" ]
authors = [
    { name = "Yufeng Xin", email = "yxin@renci.org" },
    { name = "Cong Wang", email = "cwang@renci.org" },
    { name = "Sajith Sasidharan", email = "sajith@renci.org" },
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
]

[options.packages.find]
where = "swagger_server"

[tool.setuptools]
packages = ["swagger_server", "bapm_server"]

[tool.setuptools_scm]
# Write version info collected from git to a file.  This happens when
# we run `python -m build`.
write_to = "swagger_server/_version.py"

[tool.black]
include = '\.py?$'

[tool.isort]
profile = "black"
src_paths = ["setup.py", "swagger_server", "bapm_server"]

[tool.coverage.run]
branch = true
omit = [ "swagger_server/test/*" ]
relative_files = true

# The section below will let us have relative paths in test coverage
# report. See https://hynek.me/articles/testing-packaging/
[tool.coverage.paths]
source = [
    # In checkouts.
    "swagger_server/",
    "bapm_server/",
    # In installed paths.
    "**/site-packages/",
    # In tox environments.
    ".tox/**/site-packages/",
]

